--- a/aa-apricancelloautomatico/src/main/AndroidManifest.xml
+++ b/aa-apricancelloautomatico/src/main/AndroidManifest.xml
@@ -10,7 +10,17 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
+
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+
+    <uses-sdk
+        android:minSdkVersion="18"
+        android:targetSdkVersion="18" />
+
     <application
+        android:name="com.abajeli.aa_apricancelloautomatico.ApplicationLauncherMainFromBeacon"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +35,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--service android:enabled="true"
+            android:exported="true"
+            android:isolatedProcess="false"
+            android:label="iBeacon"
+            android:name="com.abajeli.aa_apricancelloautomatico.ibeacon.service.IBeaconService">
+        </service>
+
+
+
+        <service android:enabled="true"
+            android:name="com.abajeli.aa_apricancelloautomatico.ibeacon.IBeaconIntentProcessor">
+            <meta-data android:name="background" android:value="true" />
+            <intent-filter
+                android:priority="1" >
+                <action android:name="com.abajeli.aa_apricancelloautomatico.DID_RANGING" />
+                <action android:name="com.abajeli.aa_apricancelloautomatico.DID_MONITORING" />
+            </intent-filter>
+        </service-->
+
+
+
     </application>
 
 </manifest>
